# testing

./: Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: rust.yml
src/: detect.rs  handlers.rs  logos.rs  main.rs
