[package]
name = "wuw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-sdk = "*"
rust-crypto = "*"
actix-web = "*"
actix-cors ="*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
env_logger = "*"
log = "*"
structopt = "*"
